Merged revisions 11210 via svnmerge from https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/branches/1.6-testing
........
  r11210 | rangerrick | 2008-11-10 12:52:55 -0500 (Mon, 10 Nov 2008) | 1 line
  
  various cleanups recommended by findbugs
........